--- a/docs/ESDG_mortar/refs.bib
+++ b/docs/ESDG_mortar/refs.bib
@@ -1,3 +1,11 @@
+@article{fernandez2019entropy,
+  title={{Entropy Stable h/p-Nonconforming Discretization with the Summation-by-Parts Property for the Compressible Euler and Navier-Stokes Equations}},
+  author={Fernandez, David C and Carpenter, Mark H and Dalcin, Lisandro and Zampini, Stefano and Parsani, Matteo},
+  journal={arXiv preprint arXiv:1910.02110},
+  year={2019}
+}
+
+
 @inproceedings{shadpey2019energy,
   title={{Energy-and Entropy-Stable Multidimensional Summation-by-Parts Discretizations on Non-Conforming Grids}},
   author={Shadpey, Siavosh and Zingg, David W},
